# CalibSCE

./: CalibSCE.cpp  GNUmakefile  MakeSmoothHists.cpp  MakeSystVar.cpp  README.md  SpaceChargeMicroBooNE.C  mdefs.h  normVec.hpp
CGALinterp/: CMakeCache.txt  CMakeLists.txt  FieldCorrection.cpp  Interpolation3D.cpp  Interpolation3D.hpp  Laser.cpp  Laser.hpp  LaserTrack.cpp  LaserTrack.hpp  Makefile  Matrix3x3.cpp  Matrix3x3.hpp  TPCVolumeHandler.cpp  TPCVolumeHandler.hpp  ThreeVector.cpp  ThreeVector.hpp  cmake_install.cmake  new_output.root  output.root
Fade3D/: readme.txt
Fade3D/examples/: allExamples3D  example0.list  example0_helloTriangulation.cpp
Fade3D/examples/vs2008_exampleProject/: examples_3D.sln  examples_3D.vcproj
Fade3D/examples/vs2010_exampleProject/: examples_3D.sln  examples_3D.vcxproj
Fade3D/examples/vs2012_exampleProject/: examples_3D.sln  examples_3D.vcxproj
Fade3D/examples/vs2013_exampleProject/: examples_3D.sln  examples_3D.vcxproj
Fade3D/examples/vs2015_exampleProject/: examples_3D.sln  examples_3D.vcxproj
Fade3D/examples/vs2017_exampleProject/: examples_3D.sln  examples_3D.vcxproj
Fade3D/include_fade3d/: License.h
data/: cosmicDataSCE_small.root
macros/: dispPlots.C  gaussSmooth.cpp  interpPlots.C  recoEvalPlots.C  recoEvalPlots2.C  recoEvalPlots_ProtoDUNESP.C  studyResults.C  studyResults2.C  studyResultsComb.C
results/: output_toyMC_isotropic_10000cosmics_withInterp.root  output_toyMC_isotropic_10000cosmics_withMCS_withInterp.root
